Accordion header alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -204,7 +204,7 @@ body {
   transition: 0.4s;
   margin: 1.563rem 0 0 0;
   border-bottom: 1px solid #ffe756;
-  padding-bottom: 0;
+  padding: 0;
   justify-content: space-between;
   display: flex;
   flex-flow: row nowrap;
@@ -222,8 +222,7 @@ body {
   font-size: 1.25rem;
   color: #3f2916;
   padding: 0.625rem;
-  position: relative;
-  left: -1%;
+  display: flex;
   font-weight: bold;
   /* to counter the 1px from the active class */
   border: 1px none;
