--- a/assets/sass/accordion.scss
+++ b/assets/sass/accordion.scss
@@ -10,7 +10,7 @@
     transition: 0.4s;
     margin: 1.563rem 0 0 0;
     border-bottom: 1px solid $color-accordion-border;
-    padding-bottom: 0;
+    padding: 0;
     justify-content: space-between;
 
     @include displayFlexRow;
@@ -29,8 +29,7 @@
         font-size: $font-size-regular;
         color: $color-panel-brown;
         padding: 0.625rem;
-        position: relative;
-        left: -1%;
+        display: flex;
         
         @include boldFont;
         /* to counter the 1px from the active class */
